# orderbook-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  orders.example.json
.github/workflows/: test.yml
src/: engine.rs  internals.rs  lib.rs  main.rs  order.rs  order_id.rs  order_request.rs  order_side.rs  orderbook.rs  trade.rs  util.rs
src/engine/: engine.rs  event.rs  mod.rs  order.rs  order_id.rs  order_request.rs  order_status.rs  orderbook.rs  trade.rs
src/tests/: integration_test.rs  mock_orders.json
