[package]
name = "orderbook"
version = "0.2.0"
edition = "2021"
default-run = "orderbook"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
clap = { version = "3.2.8", features = ["clap_derive", "derive"] }
compact_str = { version = "0.5.1", features = ["serde"] }
indexmap = "1.9.1"
once_cell = "~1.12"
rand = "0.8.5"
rust_decimal = "1.25.0"
serde = { version = "~1.0", features = ["derive"], optional = true }
serde_json = { version = "~1.0", optional = true }
thiserror = "1.0.31"

[profile.release]
lto = true

[[bin]]
name = "orders_generator"
test = false
bench = false
required-features = ["serde"]
